# CourtPressGER

./: .gitignore  CourtPressGER.ipynb  Makefile  README.md  add_mock_columns.py  bereinigung.ipynb  cleaning.ipynb  deskriptiv.ipynb  exploring.ipynb  hf_loader.ipynb  hum_eval.py  hum_eval_w_o_models.py  ls_results.py  pyproject.toml  pytest.ini  setup.py  synthetic_prompts.ipynb  transform_to_label_studio.py
cleaned_data.egg-info/: PKG-INFO  SOURCES.txt
courtpressger/: __init__.py  add_mock_columns.py  dataset.py  download_eurobert.py  download_eurollm.py  download_llama3_8b.py  download_llama3_9b.py  download_teuken.py  generate_report.py  main.py
courtpressger/data_cleaning/: __init__.py  cli.py  clustering.py  combined_pipeline.py  ml_classifier.py  rule_based.py  semantic_similarity.py  utils.py
courtpressger/evaluation/: __init__.py  cli.py  metrics.py  models.py  pipeline.py  utils.py
courtpressger/generation/: __init__.py  cli.py  pipeline.py  teuken_generator.py
courtpressger/human_evaluation/: __init__.py  cli.py  config.py  data_preparation.py  label_studio.py  results_processor.py  utils.py
courtpressger/summarizer_hier/: __init__.py  aggregate_summaries.py  chunk.py  cli.py  config.py  generate_summaries.py  hierarchical_summarizer.py  model_interface.py  multi_gpu.py  multi_gpu_gen.py  multi_gpu_processor.py  summ_hier.py  summary_aggregator.py  summary_generator.py  text_chunker.py
courtpressger/summarizer_hier/configs/: config_schema.json  eurollm_config.json  llama_3.3_70B_config.json  llama_3_8b_config.json  mistral_v03_config.json  openai_gpt_4o.json  teuken_config.json  teuken_hier_config.json
courtpressger/synthetic_prompts/: __init__.py  clean_all_checkpoints.py  clean_checkpoints.py  cleaner.py  cli.py  generator.py  rate_limiter.py  sanitizer.py  validator.py  verify_checkpoints.py
courtpressger/synthetic_summarization/: __init__.py  cli.py  generator.py
courtpressger/teuken_hier/: __init__.py  cli.py  config.py  dataset.py  train.py  utils.py
data/: .gitkeep
data/cleaning/: cleaned.csv  removed.csv  rule_based_results.csv
data/evaluation/factual_test/: evaluation_summary_full.json  evaluation_summary_full_factcc_only.json  evaluation_summary_full_llm_as_judge_only.json  evaluation_summary_full_qags_only.json  evaluation_summary_hier.json  evaluation_summary_hier_factcc_only.json  evaluation_summary_hier_llm_as_judge_only.json  evaluation_summary_hier_qags_only.json  evaluation_summary_organized.html
data/generation/: gpt-4o_checkpoint.json
data/human_eval/: cases_prs_synth_prompts_test_subset_human_eval_WITH_model_summaries.json  cases_prs_synth_prompts_test_subset_human_eval_WITH_model_summaries_PRESS_MODEL_MAP.json  cases_prs_synth_prompts_test_subset_human_eval_w_o_model_summaries.json  dummy_ls.json  output_press_labels_studio.json  per_model_metrics.json
data/processed/: .gitkeep
data/raw/: .gitkeep
data/source_data/: german_courts_raw.csv
data/test/: all_model_summaries.csv  base_dataset.csv  full_context_summaries.csv  hierarchical_summaries.csv
data/train/: base_dataset.csv
data/validation/: base_dataset.csv
examples/: README.md
models/: evaluation_config.json  evaluation_models_config.json  generation_config.json  teuken_only_config.json
notebooks/: analyse_generierte_pressemitteilungen.ipynb  bereinigung.ipynb  deskriptiv.ipynb  evaluation_pipeline.ipynb  generation_pipeline.ipynb  snapshot_check.ipynb  synthetic_prompts.ipynb
prompts/: merge.txt  merge_context.txt
references/: ansatz_bereinigung.md  bertscore_fixes.md  pyproject copy.toml  recherche.md
references/prompts/: init.txt
reports/: CourtPressGER.bib  acl_latex.tex  evaluation_factual_report.html  evaluation_report.html  manuscript.ipynb  manuscript.tex
reports/latex/paper/: comment.cut  courtpressger-dataset.aux  courtpressger-dataset.bbl  courtpressger-dataset.blg  courtpressger-dataset.fdb_latexmk  courtpressger-dataset.fls  courtpressger-dataset.out  courtpressger-dataset.tex  courtpressger.bib
reports/paper/: CourtPressGER.aux  CourtPressGER.fdb_latexmk  CourtPressGER.fls  CourtPressGER.out  CourtPressGER.tex
src/courtpress/: __init__.py
src/courtpress/analysis/: __init__.py  descriptive.py
src/courtpress/data/: loader.py
src/courtpress/preprocessing/: text_processor.py
src/courtpress/scripts/: generate_prompts.py  run_analysis.py  run_cleaning.py  run_combined_analysis.py
src/courtpress/utils/: gpu_utils.py  visualization.py
src/scripts/: __init__.py
tests/: test_checkpoint_generation.py  test_cleaner.py  test_csv_validator.py  test_generation_pipeline.py  test_sanitizer.py  test_teuken_model.py
tests/evaluation/: test_entity_metrics.py  test_factual_metrics.py  test_pipeline.py
