[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CourtPressGER"
version = "0.1.0"
description = "German Court Press dataset with synthetic prompts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sebastian Nagl"}
]

dependencies = [
    "datasets>=3.4.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "tqdm>=4.66.0",
    "ruff>=0.1.6",
    "mypy>=1.5.1",
    "pytest>=7.4.0",
    "black>=23.9.1",
    "anthropic>=0.49.0",
    "python-dotenv>=1.1.0",
    "rouge-score",
    "transformers",
]

[project.optional-dependencies]
# CPU-spezifische Abhängigkeiten für MacOS und Systeme ohne CUDA
# Fokussiert auf Notebook-Ausführung und grundlegende Datenverarbeitung
cpu = [
    "jupyter>=1.0.0",  # Für Notebook-Interface
]

# GPU-spezifische Abhängigkeiten für Linux-Systeme mit CUDA
gpu = [
    # CUDA-optimierte Verarbeitung
    "cudf-cu12>=24.2.0; platform_system == 'Linux'",
    "cuml-cu12>=24.2.0; platform_system == 'Linux'",
    "cupy-cuda12x>=12.0.0; platform_system == 'Linux'",
    "rmm-cu12>=24.2.0; platform_system == 'Linux'",
    # CUDA-optimierte spaCy
    "spacy-cuda-runtime>=6.4.0; platform_system == 'Linux'",
    "spacy-cuda>=0.3.0; platform_system == 'Linux'",
]

[tool.setuptools]
packages = ["courtpressger"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I", "UP"]

[tool.ruff.isort]
known-first-party = ["courtpressger"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.scripts]
courtpressger = "courtpressger.main:main"
courtpressger-clean = "courtpressger.data_cleaning.cli:main"
courtpressger-prompt = "courtpressger.synthetic_prompts.cli:main"
