[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CourtPressGER"
version = "0.1.0"
description = "German Court Press dataset with synthetic prompts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sebastian Nagl"}
]

dependencies = [
    "datasets",
    "ipykernel",
    "pandas",
    "pathlib",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "spacy",
    "tqdm",
    "ruff",
    "mypy",
    "pytest",
    "black",
    "anthropic",
    "python-dotenv",
    "rouge-score",
    "transformers",
    "sentencepiece",
    "torch",
    "jupyter",
    "nltk",
    "bert-score",
    "openai",
    "scipy",
    "pip>=25.0.1",
    "accelerate>=1.6.0",
    "langchain>=0.3.22",
    "langchain-openai>=0.3.11",
    "langchain-core>=0.3.49",
    "langchain-community>=0.3.20",
    "langchain-text-splitters>=0.3.7",
    "protobuf>=6.30.2",
]

[project.optional-dependencies]
# Keine optionalen Dependencies mehr nötig, da alles in den Hauptdependencies ist

[tool.setuptools]
packages = ["courtpressger"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I", "UP"]

[tool.ruff.isort]
known-first-party = ["courtpressger"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.scripts]
courtpressger = "courtpressger.main:main"
courtpressger-clean = "courtpressger.data_cleaning.cli:main"
courtpressger-prompt = "courtpressger.synthetic_prompts.cli:main"
courtpressger-generate = "courtpressger.generation.cli:main"
